# jarvis

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp  tts-jni.cpp
app/src/main/java/com/jarvis/assistant/: JarvisApplication.kt  MainActivity.kt
app/src/main/java/com/jarvis/assistant/commands/: CommandProcessor.kt
app/src/main/java/com/jarvis/assistant/llm/: LlamaLLMEngine.kt
app/src/main/java/com/jarvis/assistant/service/: JarvisForegroundService.kt
app/src/main/java/com/jarvis/assistant/stt/: VoskSpeechToText.kt
app/src/main/java/com/jarvis/assistant/tts/: CoquiTextToSpeech.kt
app/src/main/java/com/jarvis/assistant/ui/: ChatAdapter.kt  MainViewModel.kt
app/src/main/java/com/jarvis/assistant/util/: AudioUtils.kt  ModelDownloadManager.kt  Models.kt
app/src/main/java/com/jarvis/assistant/wakeword/: WakeWordEngine.kt
app/src/main/res/drawable/: bg_bubble_jarvis.xml  bg_bubble_user.xml  bg_mic_button.xml  ic_jarvis.xml
app/src/main/res/layout/: activity_main.xml  item_message_jarvis.xml  item_message_user.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/jarvis/assistant/: AudioUtilsTest.kt  LlamaLLMEngineTest.kt  ModelsTest.kt  VoskSpeechToTextTest.kt
